--- a/.codecov.yml
+++ b/.codecov.yml
@@ -47,6 +47,7 @@ ignore:
  - /encoding/thrift/thriftrw-plugin-yarpc/internal/tests/weather/weatherfx/
  - /encoding/thrift/thriftrw-plugin-yarpc/internal/tests/weather/weatherserver/
  - /encoding/thrift/thriftrw-plugin-yarpc/internal/tests/weather/weathertest/
+ - /internal/chooserbenchmark/example/
  - /internal/cover/
  - /internal/crossdock/crossdockpb/
  - /internal/crossdock/thrift/echo/
